# hibit_tree

./: Cargo.toml  README.md  bench.bat
benches/: get.rs  intersection.rs  iteration.rs  reduce_and.rs  reduce_or.rs
doc/: bit_block_mapping.md  node_compression.md
examples/: readme_multi_type_example.rs  readme_sparse_vec_dot.rs  readme_store_example.rs  sparse_vector.rs
src/: apply.rs  array.rs  bit_block.rs  bit_queue.rs  bit_utils.rs  bitmap_tree.rs  block.rs  bool_type.rs  borrowable.rs  caching_iter.rs  cluster_block.rs  compact_sparse_array.rs  compact_sparse_array2.rs  compact_sparse_array3.rs  compact_sparse_array3_256bit.rs  config.rs  const_int.rs  dense_tree.rs  empty.rs  exact_hierarchy.rs  exact_sparse_hierarchy.rs  fold.rs  hibit_tree.rs  iter.rs  iter2.rs  level.rs  level_masks.rs  lib.rs  op.rs  primitive_array.rs  reduce.rs  ref_or_val.rs  req_default.rs  simple_iter.rs  small_block.rs  sparse_array.rs  sparse_array_levels.rs  sparse_hierarchy.rs  sparse_hierarchy2.rs  sparse_hierarchy_orig.rs  (+2 more)
src/block/: block.rs  bypass.rs  cluster_block.rs  mod.rs  small_block.rs
src/compact_sparse_array/: from.rs  node.rs  tests.rs
src/const_utils/: cond_type.rs  const_array.rs  const_bool.rs  const_int.rs  const_loop.rs  mod.rs
src/dense_tree/: from.rs  tests.rs
src/level/: intrusive_list_level.rs  level.rs  mod.rs  single_block_level.rs
src/level_block/: block.rs  bypass.rs  cluster_block.rs  mod.rs  small_block.rs
src/ops/: _multi_intersection.rs  _multi_intersection4.rs  _multi_union.rs  _multi_union4.rs  intersection.rs  intersection_fold.rs  map.rs  mod.rs  multi_fold.rs  multi_intersection2.rs  multi_intersection3.rs  multi_intersection4.rs  multi_intersection_fold.rs  multi_map_fold.rs  multi_union3.rs  multi_union4.rs  union.rs  union2.rs  union3.rs  union_fold.rs
src/ops2/: intersection2.rs  mod.rs  multi_intersection.rs  multi_intersection2.rs  multi_union2.rs  multi_union3.rs  union2.rs  union3.rs
src/utils/: array.rs  borrowable.rs  function.rs  lending_iterator.rs  mod.rs  primitive.rs  take.rs
tests/: bypass_level.rs  cluster_array.rs  common.rs  from.rs  fuzzy.rs  level_depth.rs  reduce_and.rs  sparse_array.rs  sparse_tree.rs
