[package]
name = "hi_sparse_array"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wide = "0.7.15"
arrayvec = "0.7.4"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"
itertools = "0.12.1"
nohash-hasher = "0.2.0"

[[bench]]
name = "get"
harness = false

[[bench]]
name = "iteration"
harness = false

[[bench]]
name = "reduce_and"
harness = false