[package]
name = "hi_sparse_array"
version = "0.1.0"
rust-version = "1.79.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["simd"]
simd = ["dep:wide"]

[dependencies]
arrayvec = "0.7.4"
#thin-vec = "0.2.13"

[dependencies.wide]
optional = true
version = "0.7.24"

[dev-dependencies]
criterion = "0.5.1"
itertools = "0.13.0"
nohash-hasher = "0.2.0"
rand = "0.8.5"

[package.metadata.docs.rs]
features = ["simd"]
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "get"
harness = false

[[bench]]
name = "iteration"
harness = false

[[bench]]
name = "reduce_and"
harness = false

[[bench]]
name = "reduce_or"
harness = false

[[bench]]
name = "intersection"
harness = false
