[package]
name = "hibit_tree"
license = "MIT OR Apache-2.0"
version = "0.1.0-alpha.1"
rust-version = "1.79.0"
edition = "2021"
categories = ["data-structures"]

[features]
default = ["simd"]
simd = ["dep:wide"]
# Allows storing &T in containers.  
# https://doc.rust-lang.org/nomicon/dropck.html#an-escape-hatch
may_dangle = []

[dependencies]
arrayvec = "0.7.4"

[dependencies.wide]
optional = true
version = "0.7.24"

[dev-dependencies]
criterion = "0.5.1"
itertools = "0.13.0"
nohash-hasher = "0.2.0"
ahash = "0.8.11"
rand = "0.8.5"

[package.metadata.docs.rs]
features = ["simd"]
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "get"
harness = false

[[bench]]
name = "iteration"
harness = false

[[bench]]
name = "reduce_and"
harness = false

[[bench]]
name = "reduce_or"
harness = false

[[bench]]
name = "intersection"
harness = false
